live chat update daudz

--- a/slide/package.json
+++ b/slide/package.json
@@ -13,6 +13,7 @@
     "crypto": "1.0.1",
     "cryptojs": "2.5.3",
     "dotenv": "16.0.3",
+    "escape-html": "^1.0.3",
     "https": "1.0.0",
     "mysql": "2.18.1",
     "mysql2": "3.2.0",
